--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 
 Welcome to Project Moviemeta! 
 
-We're interested in "What's in the minds across the whole world? What can we learn from the movie topics?".
+<br>We're interested in "What's in the minds across the whole world? What can we learn from the movie topics?".
 
-Here, you can find interesting insights on the movie topics across the world.
+<br>Here, you can find interesting insights on the movie topics across the world.
 
-Popular movies for a specific country should contain social, political meaning on that country/society.
+<br>Popular movies for a specific country should contain social, political meaning on that country/society.
 
-We investigated topic distributions of popular movies for United States, Germany, United Kingdom, and South Korea. 
-We selected those four countries to see if there are any similarity or uniqueness among those countries.
+<br>We investigated topic distributions of popular movies for United States, Germany, United Kingdom, and South Korea. 
+<br>We selected those four countries to see if there are any similarity or uniqueness among those countries.
 
 <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 1020px; height: 1033px;'><noscript><a href='#'><img alt='Topic Distribution ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gl&#47;Global_top10_topics_Story&#47;Story1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='1020' height='1033' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='Global_top10_topics_Story&#47;Story1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gl&#47;Global_top10_topics_Story&#47;Story1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
 
