--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 
-Welcome to Project Moviemeta! Here, you can find interesting insights on the movie topics across the world.
-
+<h1> Welcome to Project Moviemeta! </h1>
 <br>
 <br>
 <br> 
