--- a/index.html
+++ b/index.html
@@ -1,7 +1,45 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+h1 {
+    font-family: Calibri, Candara, Segoe, 'Segoe UI', Optima, Arial, sans-serif;
+	  font-size: 24px;
+	  font-style: normal;
+	  font-variant: normal;
+	  font-weight: 500;
+	  line-height: 26.4px;
+}
 
-<h1> Welcome to Project Moviemeta! </h1>
+h3 {
+	font-family: Calibri, Candara, Segoe, 'Segoe UI', Optima, Arial, sans-serif;
+	font-size: 14px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 15.4px;
+}
+p  {
+    font-family: Calibri, Candara, Segoe, 'Segoe UI', Optima, Arial, sans-serif;
+	  font-size: 14px;
+	  font-style: normal;
+	  font-variant: normal;
+	  font-weight: 400;
+	  line-height: 20px;
+}
+</style>
+</head>
+<body>
+
+<h1>Welcome to Project Moviemeta!</h1>
 <br>
+<p> Here, you can find interesting insights on the movie topics across the world. We collected metadata of movies across the world
+since 2001, and investigated the topics by topic modeling. </p>
 <br>
+<h3> What are the popular movie topics across countries?</h3>
+Topics of popular movies is an utmost important indicator of interests/issues of a society, because making movie and selecting movie are inevitably affected by social, political, and historical background. To answer our first question, 1,600 popular movie plots for United States, United Kingdom, Germany, and South Korea were analyzed since 2007(50 popular movies per year, per country). 
+Global popular topics represent the 'overall' popularity of topics across the 4 countries. As we can see in above plot, topic of  'love, relationships' is the most popular, along with 'love, family', 'exploration, nature, space', 'friendship, relationships', and 'society, culture'. 
+Interestingly, 3 out of top 5 topics represent 'relationship' with others(love, family, friendship), indicating that the 'relationship' is in the heart of our life. Prevalent words for each topics, such as love, woman, friend, marriage, wife, father, and mother, also indicate that relationship with family, friend, and spouse is a utmost important issues. 
 
 <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 1020px; height: 1033px;'><noscript><a href='#'><img alt='Topic Distribution of Popular Movies ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Topic_Distribution_Popular_Movies&#47;Story1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='1020' height='1033' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='Topic_Distribution_Popular_Movies&#47;Story1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Topic_Distribution_Popular_Movies&#47;Story1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
 <br>
@@ -11,3 +49,6 @@
 <br>
 <br>
 <br>
+
+</body>
+</html>
