--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@ h1 {
 
 h3 {
 	font-family: Calibri, Candara, Segoe, 'Segoe UI', Optima, Arial, sans-serif;
-	font-size: 14px;
-	font-style: normal;
+	font-size: 18px;
+	font-style: bold;
 	font-variant: normal;
 	font-weight: 500;
 	line-height: 15.4px;
 }
 p  {
     font-family: Calibri, Candara, Segoe, 'Segoe UI', Optima, Arial, sans-serif;
-	  font-size: 14px;
+	  font-size: 16px;
 	  font-style: normal;
 	  font-variant: normal;
 	  font-weight: 400;
@@ -37,7 +37,7 @@ p  {
 since 2001, and investigated the topics by topic modeling. </p>
 <br>
 <h3> What are the popular movie topics across countries?</h3>
-Topics of popular movies is an utmost important indicator of interests/issues of a society, because making movie and selecting movie are inevitably affected by social, political, and historical background. To answer our first question, 1,600 popular movie plots for United States, United Kingdom, Germany, and South Korea were analyzed since 2007(50 popular movies per year, per country). 
+Topics of popular movies is an important indicator of interests or issues of a society, because making movie and selecting movie are inevitably affected by social, political, and historical background. To answer our first question, 1,600 popular movie plots for United States, United Kingdom, Germany, and South Korea were analyzed since 2007(50 popular movies per year, per country). 
 Global popular topics represent the 'overall' popularity of topics across the 4 countries. As we can see in above plot, topic of  'love, relationships' is the most popular, along with 'love, family', 'exploration, nature, space', 'friendship, relationships', and 'society, culture'. 
 Interestingly, 3 out of top 5 topics represent 'relationship' with others(love, family, friendship), indicating that the 'relationship' is in the heart of our life. Prevalent words for each topics, such as love, woman, friend, marriage, wife, father, and mother, also indicate that relationship with family, friend, and spouse is a utmost important issues. 
 
