--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ p  {
 <p> Here, you can find interesting insights on the movie topics across the world. We collected metadata of movies across the world
 since 2001, and investigated the topics by topic modeling. </p>
 <br>
-<h3> What are the popular movie topics across countries?</h3>
+<h3> <b><i>What are the popular movie topics across countries?</b></i></h3>
 <p>Topics of popular movies is an important indicator of interests or issues of a society, because making movie and selecting movie are inevitably affected by social, political, and historical background. To answer our first question, 1,600 popular movie plots for United States, United Kingdom, Germany, and South Korea were analyzed since 2007(50 popular movies per year, per country). 
 Global popular topics represent the 'overall' popularity of topics across the 4 countries. As we can see in above plot, topic of  'love, relationships' is the most popular, along with 'love, family', 'exploration, nature, space', 'friendship, relationships', and 'society, culture'. 
 Interestingly, 3 out of top 5 topics represent 'relationship' with others(love, family, friendship), indicating that the 'relationship' is in the heart of our life. Prevalent words for each topics, such as love, woman, friend, marriage, wife, father, and mother, also indicate that relationship with family, friend, and spouse is a utmost important issues.</p>
