--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ p  {
 </head>
 <body>
 
-<h1>Welcome to Project Moviemeta!</h1>
+<h1><b>Welcome to Project Moviemeta!</b></h1>
 <br>
 <p> Here, you can find interesting insights on the movie topics across the world. We collected metadata of movies across the world
 since 2001, and investigated the topics by topic modeling. </p>
