--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ p  {
 <h1><b>Welcome to Project Moviemeta!</b></h1>
 <br> 
 <h3><b>Intro</b></h3>
-<p> Do you like movies? What kind of movies do you like? Hollywood blockbuster or independent film? We're interested in how diverse the movie topics are and how does socio-political or historical background affect the topics of movies. Here, we'll describe some interesting results of the topic analyses on movies across the world. Hope you enjoy and make awesome findings! </p>
+<p> Do you like movies? What kind of movies do you like? Hollywood blockbuster or independent film? We're interested in how diverse the movie topics are and how does socio-political or historical background affect the topics of movies. Here, we'll describe some interesting results of the topic analyses on movies across the world. Hope you enjoy and make awesome findings here! </p>
 <br>
 <h3> <b>What are the popular movie topics across countries?</b></h3>
 <p>Topics of popular movies is an important indicator of interests or issues of a society, because making and selecting movie are inevitably affected by social, political, and historical background. To answer our first question, 2,400 popular movie plots for United States, United Kingdom, Germany, Russia, Mexico, and South Korea were analyzed since 2007(50 popular movies per year, per country). 
