--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@ p  {
 <br>
 
 <h3><b>Data Source</b></h3>
-- moive metadata from IMDb(www.imdb.com) since 2000
-- movie metadata from wikipedia(www.dbpedia.org)
-- box office top movies from Box Office Mojo(www.boxofficemojo.com)
+- moive metadata from IMDb(www.imdb.com) since 2000<br>
+- movie metadata from wikipedia(www.dbpedia.org)<br>
+- box office top movies from Box Office Mojo(www.boxofficemojo.com)<br>
 
 
 <h3> <b>What are the popular movie topics across countries?</b></h3>
