--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ p  {
 <h3><b>Data Source</b></h3>
 - moive metadata from IMDb(www.imdb.com) since 2000<br>
 - movie metadata from wikipedia(www.dbpedia.org)<br>
-- box office top movies from Box Office Mojo(www.boxofficemojo.com)<br>
+- box office top movies from Box Office Mojo(www.boxofficemojo.com) since 2007<br>
 
 
 <h3> <b>What are the popular movie topics across countries?</b></h3>
