--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ p  {
 <h1><b>Welcome to Project Moviemeta!</b></h1>
 <br> 
 <h3><b>Intro</b></h3>
-<p> Do you like movies? What kind of movies do you like? Hollywood blockbuster or independent film? We're interested in how diverse the movie topics are and how does socio-political or historical background affect the topics of movies. Here, we'll describe some interesting results of the topic analyses on movies across the world. Hope you enjoy and make awesome findings here! </p>
+<p> Do you like movies? What kind of movies do you like? Hollywood blockbuster or independent film? We're interested in how diverse the movie topics are and how does socio-political or historical background affect the topics of movies. Here, we'll describe some interesting results of the topic analyses on movies across the world. Hope you enjoy and make interesting findings here! </p>
 <br>
 <h3><b>Data Source</b></h3>
 <p>- moive metadata from IMDb(www.imdb.com) since 2000<br>
