--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ p  {
 - movie metadata from wikipedia(www.dbpedia.org)<br>
 - box office top movies from Box Office Mojo(www.boxofficemojo.com) since 2007<br></p>
 <h3><b>Data Processing</b></h3>
-<p>We performed <b>Latent Dirichlet Allocation</b> and <b>doc2vec</b> analysis on the metadata of movies, especially on the movie plots. You can find our detailed processing <p><a href="https://github.com/soorajmr/moviemeta/tree/master/notebooks">here</a></p>.</p>
+<p>We performed <b>Latent Dirichlet Allocation</b> and <b>doc2vec</b> analysis on the metadata of movies, especially on the movie plots. You can find our detailed processing <a href="https://github.com/soorajmr/moviemeta/tree/master/notebooks">here</a>.</p>
 <h3> <b>What are the popular movie topics across several movie-loving countries?</b></h3>
 <p>Topics of popular movies is an important indicator of interests or issues of a society, because making and selecting movie are inevitably affected by social, political, and historical background. To answer our question, 2,400 popular movie plots for United States, United Kingdom, Germany, Russia, Mexico, and South Korea were analyzed since 2007(50 popular movies per year, per country). Popularity of a topic can be represented by prevalency of that topic in each movie. 
 Global popular topics represent the 'overall' popularity of topics across the 6 countries. As we can see in the following chart, topic of  <b>'love, family'</b> is the most popular, along with <b>'friendship, relationship','crime, mistery','gangs, drugs, police',
