--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ h1 {
 h3 {
 	font-family: Calibri, Candara, Segoe, 'Segoe UI', Optima, Arial, sans-serif;
 	font-size: 18px;
-	font-style: bold;
+	font-style: normal;
 	font-variant: normal;
 	font-weight: 500;
 	line-height: 15.4px;
