--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ p  {
 <h1><b>Welcome to Project Moviemeta!</b></h1>
 <br> 
 <h3><b>Intro</b></h3>
-<p> Do you like movies? What kind of movies do you like? Hollywood blockbuster or independent film? Say that we are a start-up film maker and looking for 'target' countries from which our new films would get big profit.What can we do first to get insights on the target market? We should do researches on <b>how diverse the movie topics are and how does socio-political or historical background affect the topics of movies</b>. In other words, investigation on <b>popular topics across the world</b> should give some insights for us. Here, we'll describe some interesting results of the topic analyses on movies across the world. Hope you enjoy and make interesting findings here! </p>
+<p> Do you like movies? What kind of movies do you like? Hollywood blockbuster or independent film? Say that we are a start-up film maker and looking for 'target' countries from which our new films would get big profit. What can we do first to get insights on the target markets? We should start from some researches on <b>what topics are popular, how diverse the movie topics are</b> and <b>how does socio-political or historical background affect the topics of movies</b>. In other words, investigation on the <b>distribution of topics across the world</b> should give some insights for us. Here, we'll describe some interesting results of the topic analyses on movies across the world. Hope you enjoy and make interesting findings here! </p>
 <br>
 <h3><b>Data Source</b></h3>
 <p>- moive metadata from IMDb(www.imdb.com) since 2000<br>
