--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@ p  {
 <p> Do you like movies? What kind of movies do you like? Hollywood blockbuster or independent film? Say that we are a start-up film maker and looking for 'target' countries from which our new films would get big profit. What can we do first to get insights on the target markets? We should start from some researches on <b>what topics are popular, how diverse the movie topics are</b> and <b>how does socio-political or historical background affect the topics of movies</b>. In other words, investigation on the <b>distribution of topics across the world</b> should give some insights for us. Here, we'll describe some interesting results of the topic analyses on movies across the world. Hope you enjoy and make interesting findings here! </p>
 <br>
 <h3><b>Data Source</b></h3>
-<p>- moive metadata from IMDb(www.imdb.com) since 2000<br>
+<p>- moive metadata from IMDb(<a href="www.imdb.com">www.imdb.com</a>) since 2000<br>
 - movie metadata from wikipedia(www.dbpedia.org)<br>
 - box office top movies from Box Office Mojo(www.boxofficemojo.com) since 2007<br></p>
 <h3><b>Data Processing</b></h3>
-<p>We performed <b>Latent Dirichlet Allocation</b> and <b>doc2vec</b> analysis on the metadata of movies, especially on the movie plots. You can find our processing in-deatil <a href="https://github.com/soorajmr/moviemeta/tree/master/notebooks">here</a>.</p>
+<p>We performed <b>Latent Dirichlet Allocation<<a href="https://github.com/soorajmr/moviemeta/tree/master/notebooks">here</a>/b> and <b>doc2vec</b> analysis on the metadata of movies, especially on the movie plots. You can find our processing in-deatil <a href="https://github.com/soorajmr/moviemeta/tree/master/notebooks">here</a>.</p>
 <h3> <b>What are the popular movie topics across several movie-loving countries?</b></h3>
 <p>Topics of popular movies is an important indicator of interests or issues of a society, because making and selecting movie are inevitably affected by social, political, and historical background. To answer our question, 2,400 popular movie plots for United States, United Kingdom, Germany, Russia, Mexico, and South Korea were analyzed since 2007(50 popular movies per year, per country). Popularity of a topic can be represented by prevalency of that topic in each movie. 
 Global popular topics represent the 'overall' popularity of topics across the 6 countries. As we can see in the following chart, topic of  <b>'love, family'</b> is the most popular, along with <b>'friendship, relationship','crime, mistery','gangs, drugs, police',
