--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ p  {
 <br>
 <h3><b>Data Source</b></h3>
 <p>- moive metadata from IMDb(<a href="www.imdb.com">www.imdb.com</a>) since 2000<br>
-- movie metadata from wikipedia(www.dbpedia.org)<br>
-- box office top movies from Box Office Mojo(www.boxofficemojo.com) since 2007<br></p>
+- movie metadata from wikipedia(<a href="wiki.dbpedia.org">wiki.dbpedia.org</a>)<br>
+- box office top movies from Box Office Mojo(<a href="www.boxofficemojo.com">www.boxofficemojo.com</a>) since 2007<br></p>
 <h3><b>Data Processing</b></h3>
 <p>We performed <b>Latent Dirichlet Allocation<<a href="https://github.com/soorajmr/moviemeta/tree/master/notebooks">here</a>/b> and <b>doc2vec</b> analysis on the metadata of movies, especially on the movie plots. You can find our processing in-deatil <a href="https://github.com/soorajmr/moviemeta/tree/master/notebooks">here</a>.</p>
 <h3> <b>What are the popular movie topics across several movie-loving countries?</b></h3>
