--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Moviemeta web by soorajmr</title>
+    <title>Moviemeta Project Website</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -18,13 +18,45 @@
         <h1>Moviemeta web</h1>
         <p>cs109 project moviemeta</p>
 
-        <p class="view"><a href="https://github.com/soorajmr/moviemeta_web">View the Project on GitHub <small>soorajmr/moviemeta_web</small></a></p>
+        <p class="view"><a href="https://github.com/wsunkim/moviemeta_web">View the Project on GitHub <small>wsunkim/moviemeta_web</small></a></p>
+
+		<h1><b>Welcome to Project Moviemeta!</b></h1>
+<br> 
+<h3><b>Intro</b></h3>
+<p> Do you like movies? What kind of movies do you like? Hollywood blockbuster or independent film? Say that we are a start-up film maker and looking for 'target' countries from which our new films would get big profit. What can we do first to get insights on the target markets? We should start from some researches on <b>what topics are popular, how diverse the movie topics are</b> and <b>how does socio-political or historical background affect the topics of movies</b>. In other words, investigation on the <b>distribution of topics across the world</b> should give some insights for us. Here, we'll describe some interesting results of the topic analyses on movies across the world. Hope you enjoy and make interesting findings here! </p>
+<br>
+<h3><b>Data Source</b></h3>
+<p>- moive metadata from IMDb(<a href="http://www.imdb.com">www.imdb.com</a>) since 2000<br>
+- movie metadata from wikipedia(<a href="http://wiki.dbpedia.org">wiki.dbpedia.org</a>)<br>
+- box office top movies from Box Office Mojo(<a href="http://www.boxofficemojo.com">www.boxofficemojo.com</a>) since 2007<br></p>
+<h3><b>Data Processing</b></h3>
+<p>We performed <b>Latent Dirichlet Allocation</b> and <b>doc2vec</b> analysis on the metadata of movies, especially on the movie plots. You can find our processing in-deatil <a href="https://github.com/soorajmr/moviemeta/tree/master/notebooks">here</a>.</p>
+<h3> <b>What are the popular movie topics across several movie-loving countries?</b></h3>
+<p>Topics of popular movies is an important indicator of interests or issues of a society, because making and selecting movies are inevitably affected by social, political, and historical background. To answer our question, 2,400 popular movie plots for United States, United Kingdom, Germany, Russia, Mexico, and South Korea were analyzed since 2007(50 popular movies per year, per country). Popularity of a topic can be represented by prevalency of that topic in each movie. 
+Global popular topics represent the 'overall' popularity of topics across the 6 countries. As we can see in the following chart, topic of  <b>'love, family'</b> is the most popular, along with <b>'friendship, relationship','crime, mistery','gangs, drugs, police',
+, and 'fantasy, fairy tale'</b>. 
+Interestingly, top 2 topics represent 'relationship' with others(love, family, friendship), indicating that the 'relationship' is in the heart of our life. Prevalent words for each topics, such as marriage, wife, father, family, friend, and mother, also indicate that relationship with family, friend, and spouse is a utmost important issues. 2 out of top 5 topics are related to 'crime', indicating the awareness on the common dark side issue of our lives across the world.
+Regardless of the limited number of popular movies, we could find a wide spectrum of topics, from 'love, relationship' to 'war', 'terrorism', and 'press, politics'. </p>
+<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 1020px; height: 1033px;'><noscript><a href='#'><img alt='Topic Distribution of Popular Movies ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Po&#47;Popularity_final&#47;Story1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='1020' height='1033' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='Popularity_final&#47;Story1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Po&#47;Popularity_final&#47;Story1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
+<br>
+<h3><b> Are there any differences in popular topics across countries?</b></h3>
+<p>Comparing popular topic distribution across 6 countries(<i>click the square box "Country-wise Global Top 10 Topic Distribution</i> in above chart), we could see that the popularity of different topics is quite similar across the countries. It may be because considerable number of top movies in those countries are overlapped each other. One interesting difference was noticed for South Korea: the most popular topic in South Kroea is 'crime, mistery', while 'love, family' is the most popular in the other countries. Further detailed analyses should be required to get the origin of this uniqueness of South Korea, but it clearly shows the South Korean moviegoers' preference or public awareness toward the topic. </p>
+<h3><b>Are there any differences in movie topics produced in different countries(origin of movies)?</b></h3>
+<p>To get more insights from the popular topics and topic distribution, we addressed a different view point: <b></b>"Origin of Movies"</b>. If topics of movies produced in a specific country(for example, South Korea) show a unique interests on some particular topics(for example, 'crime, mystery'), it can be interpreted as a result of 'preference', 'taste' or 'common socio-political interests' in that country. If we can get geographical distribution of movie topics by origin of movies, it should give us a more clear insights on deciding where to proceed. Thus, we performed analyses on topic distribution by origin of movies across about 70 countries in the world, since 2007.</p>
+<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 1020px; height: 1133px;'><noscript><a href='#'><img alt='Topic Distribution by Origin ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Or&#47;Origin_over_100&#47;Story1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='1020' height='1133' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='Origin_over_100&#47;Story1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Or&#47;Origin_over_100&#47;Story1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
+<p>Above map shows the distribution of the number of movies produced in each country. The size of bubble represents the total number of movies produced in that country. As expected, United States is the "greatest producer" of movies in the world, and Canada, United Kingdom, Germany, and India also show considerable number of movies. You can see the topic distribution of each country in-detail, by clicking the bubble on the map, and by hovering on the name of country in the bar chart, you can order the topics in ascending/descending. Although we are using 'normalized' topic prevalence as a measure, let's compare countries with number of movies greater than 100 to avoid mis-interpretation on the topic distribution for those countries with small number of movie data.</p>
+<p>Among those countries, <b>India</b> show somewhat different behavior comparing top t prevalent topics. Indian movies show relatively higher preference toward the topic 'crime, police, underworld', ranked 4th, while it did not rank in the top 10 for the other countries. Movies produced in <b>South Africa, Hong Kong, Bulgaria, Egypt, and Cuba show highest preference toward 'society, culture'. <b>Japanese, South Korean, and Russian movies</b> shows relatively higher interests on the topic <b>'spies, terrorism'</b>, compared to other countries. We could see the uniqueness of topic distribution by origin of movies clearly.</p>
+<p>Are there any difference between the <b>preference of moviegoers and the preference of movie makers</b>? Difference between these two preference can give us a clue on the diversity of movie industry of a specific country. Clue on this question could be obtained by comparing 'popular topics of movies shown in a country' and 'prevalent topics of movies produced in a country'. By comparing top 5 topics in each category for each country, we could find that 2~3 out of top 5 topics are different. For those 4 countries, topic <b> 'gangs, drug, police'</b> ranked in top 5, but the movie-makers do not show such a high preference toward that topic. Also, movie-makers in those countries show relatively high preference toward the topic <b>'exploration, nature, space'</b>, but moviegoers do not show such a high preference toward that topic. From these results, we could find that there exits some difference between moviegoers' preference and movie-makers' preference.</p>
+
+<h3><b>Video</b></h3>
+<p>Here is our video. You can find some process details and summary of the results on this video.</p>
+<br>
 
 
         <ul>
-          <li><a href="https://github.com/soorajmr/moviemeta_web/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/soorajmr/moviemeta_web/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/soorajmr/moviemeta_web">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/wsunkim/moviemeta_web/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/wsunkim/moviemeta_web/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/wsunkim/moviemeta_web">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
